@@ -17,6 +17,7 @@ v0.9.3
 * [BGBUILD-250] EBS plugin incorrectly determines that non-US regions are not EC2 instances
 * [BGBUILD-254] Not able to deliver EBS AMIs to regions other than us-east-1
 * [BGBUILD-260] Wrong EC2 discovery causing libguestfs errors on non US regions
+* [BGBUILD-261] Decrease amount of debug log when downloading or uploading file using guestfs
 
 v0.9.2
 
